# fnsvr

./: .gitignore  CLAUDE.md  MANIFEST.in  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-gmail-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-user-facing-output/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-automation-and-distribution/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-landing-page/: 05-01-PLAN.md  05-01-SUMMARY.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Docs/: CLAUDE.md  CNAME  LICENSE  TECH_SPEC.md  config.example.yaml  pyproject.toml
docs/: CONTRIBUTING.md  PRD.md  README.md  VISION.md  index.html
homebrew/: fnsvr.rb
site/: index.html
src/fnsvr/: __init__.py  cli.py  config.py  detector.py  digest.py  downloader.py  notifier.py  reviewer.py  scanner.py  scheduler.py  storage.py
tests/: conftest.py  test_config.py  test_detector.py  test_digest.py  test_downloader.py  test_scanner.py  test_scheduler.py  test_storage.py
