[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fnsvr"
version = "0.1.0"
description = "Local-first Gmail scanner that catches financial emails you can't afford to miss."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Jason Madhosingh"},
]
keywords = ["gmail", "finance", "tax", "k1", "email-scanner", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "PyYAML>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[project.scripts]
fnsvr = "fnsvr.cli:main"

[project.urls]
Homepage = "https://github.com/madho/fnsvr"
Repository = "https://github.com/madho/fnsvr"
Issues = "https://github.com/madho/fnsvr/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fnsvr = ["config.example.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
